# skindx

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.nb  Makefile  README.md  act.mk  docker-compose.yml  fly.toml  main.py  nginx.conf  pyproject.toml  start.sh
.github/workflows/: code-quality.yml  deploy-hf.yml  security.yml
assets/: styles.css
docs/: CNAME  README.md  _navbar.md  _sidebar.md  architecture.md  index.html  model-management.md  services.md  testing.md
docs/docs/: README.md  _navbar.md  cicd.md  setup-deployment.md  training-pipeline.md
docs/static/js/: chatbot.js
notebooks/HAM10000/: 01_data_exploration.ipynb  02_balancing_training.ipynb  03_inference.ipynb
notebooks/helpers/: cnn_trainer.py  tester.py
src/: constants.py  model_loader.py  utils.py
src/ui/: app.py  ui_utils.py
tests/: README.md  conftest.py  test_file_validation.py  test_image_preprocessing.py  test_model_loader.py
